--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sezgi-gunes/noyirmibir-react",
-  "version": "0.1.1",
+  "version": "0.8.0",
   "description": "Noyirmibir React",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -59,5 +59,14 @@
     "dist"
   ],
   "types": "dist/index.d.ts",
-  "dependencies": {}
+  "dependencies": {
+    "@types/react-datepicker": "^4.4.1",
+    "@types/react-input-mask": "^3.0.1",
+    "@types/react-transition-group": "^4.4.4",
+    "react-datepicker": "^4.8.0",
+    "react-input-mask": "^2.0.4",
+    "react-number-format": "^4.9.3",
+    "react-select": "^5.3.2",
+    "react-transition-group": "^4.4.2"
+  }
 }
